<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/username_or_email"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="224dp"
        android:background="@color/gray94"
        android:ems="10"
        android:fontFamily="@font/fredoka_one"
        android:hint="@string/username_or_email"
        android:inputType="textEmailAddress|textPersonName"
        android:textColor="@color/gray20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/send_reset"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_button"
        android:bottomLeftRadius="8dp"
        android:bottomRightRadius="8dp"
        android:fontFamily="@font/fredoka_one"
        android:onClick="onClick"
        android:text="@string/send_reset"
        android:textColor="@color/white"
        android:topLeftRadius="8dp"
        android:topRightRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/username_or_email"
        app:layout_constraintStart_toStartOf="@+id/username_or_email"
        app:layout_constraintTop_toBottomOf="@+id/username_or_email"
        app:layout_constraintVertical_bias="0.050000012" />

    <Button
        android:id="@+id/sign_up1"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="172dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/fredoka_one"
        android:onClick="onClick"
        android:text="@string/register"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/send_reset"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/send_reset" />

    <Button
        android:id="@+id/skip_to_restaurants"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="172dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/fredoka_one"
        android:onClick="onClick"
        android:text="@string/skip_to_restaurants"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.692"
        app:layout_constraintStart_toStartOf="@+id/send_reset"
        app:layout_constraintTop_toBottomOf="@+id/send_reset" />

</android.support.constraint.ConstraintLayout>