<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/firstNameInput"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="60dp"
        android:background="@color/gray94"
        android:ems="10"
        android:fontFamily="@font/fredoka_one"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textAllCaps="false"
        android:textColor="@color/gray20"
        app:layout_constraintEnd_toStartOf="@+id/lastNameInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/lastNameInput"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="60dp"
        android:background="@color/gray94"
        android:ems="10"
        android:fontFamily="@font/fredoka_one"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:textColor="@color/gray20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/firstNameInput"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/addressInput"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/gray94"
        android:ems="10"
        android:fontFamily="@font/fredoka_one"
        android:hint="@string/address"
        android:inputType="textPostalAddress"
        android:textColor="@color/gray20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameInput" />

    <EditText
        android:id="@+id/apartmentNumInput"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/gray94"
        android:ems="10"
        android:fontFamily="@font/fredoka_one"
        android:hint="@string/apartment_number"
        android:inputType="text"
        android:textColor="@color/gray20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressInput" />

    <EditText
        android:id="@+id/stateAbbrev"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"
        android:background="@color/gray94"
        android:ems="10"
        android:fontFamily="@font/fredoka_one"
        android:hint="State (MO)"
        android:textColor="@color/gray20"
        app:layout_constraintEnd_toStartOf="@+id/zipCodeInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apartmentNumInput" />

    <EditText
        android:id="@+id/zipCodeInput"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:background="@color/gray94"
        android:ems="10"
        android:fontFamily="@font/fredoka_one"
        android:hint="Zipcode"
        android:inputType="textPersonName"
        android:textColor="@color/gray20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/stateAbbrev"
        app:layout_constraintTop_toBottomOf="@+id/apartmentNumInput" />

    <EditText
        android:id="@+id/phoneNumberInput"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/gray94"
        android:ems="10"
        android:fontFamily="@font/fredoka_one"
        android:hint="Phone Number"
        android:inputType="phone"
        android:textColor="@color/gray20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stateAbbrev" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/gray94"
        android:ems="10"
        android:fontFamily="@font/fredoka_one"
        android:hint="Email Address"
        android:inputType="textEmailAddress"
        android:textColor="@color/gray20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumberInput" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/gray94"
        android:ems="10"
        android:fontFamily="@font/fredoka_one"
        android:hint="Password"
        android:inputType="numberPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInput" />

    <EditText
        android:id="@+id/cpasswordInput"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/gray94"
        android:ems="10"
        android:fontFamily="@font/fredoka_one"
        android:hint="Confirm Password"
        android:inputType="numberPassword"
        android:textColor="@color/gray20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

</android.support.constraint.ConstraintLayout>